@@ -6,12 +6,15 @@ stated differently.
 
 version 1.01:
 
+	Improvements:
+	- add UNKNOWN modifier
+
 version 1.00: Wed  3 Dec 13:21:40 CET 2025
 
 	Improvements:
 	- add bugtracker to meta
-	- add ellipsis modifier
-	- add chop modifier
+	- add ellipsis EL modifier
+	- add CHOP modifier
 	- add defaults configuration
 	- better document encodeFor()
 	- add DateTime support for time modifiers
